@@ -105,6 +105,7 @@
 #gptofoo bjc-PIXMA-iP5000 printer/Canon-PIXMA-iP5000
 #gptofoo bjc-PIXMA-iP5200 printer/Canon-PIXMA-iP5200
 #gptofoo bjc-PIXMA-iP5300 printer/Canon-PIXMA-iP5300
+#gptofoo bjc-PIXMA-iP6000D printer/Canon-PIXMA-iP6000D
 #gptofoo bjc-PIXMA-iP6700 printer/Canon-PIXMA-iP6700
 #gptofoo bjc-PIXMA-iP8500 printer/Canon-PIXMA-iP8500
 #gptofoo bjc-PIXMA-iX5000 printer/Canon-PIXMA-iX5000
@@ -113,6 +114,7 @@
 #gptofoo bjc-MULTIPASS-MP170 printer/Canon-MULTIPASS-MP170
 #gptofoo bjc-MULTIPASS-MP180 printer/Canon-MULTIPASS-MP180
 #gptofoo bjc-MULTIPASS-MP500 printer/Canon-MULTIPASS-MP500
+#gptofoo bjc-MULTIPASS-MP520 printer/Canon-MULTIPASS-MP520
 #gptofoo bjc-MULTIPASS-MP610 printer/Canon-MULTIPASS-MP610
 #gptofoo bjc-MULTIPASS-MP700 printer/Canon-MULTIPASS-MP700
 #gptofoo bjc-MULTIPASS-MP710 printer/Canon-MULTIPASS-MP710
