@@ -156,6 +156,10 @@ II) MAJOR CHANGES FROM PREVIOUS RELEASES
 	EPSON Stylus Photo RX680
 	EPSON Stylus Photo RX685
 
+      * Canon inkjet printers:
+        Canon PIXMA MP520
+	Canon PIXMA iP6000D
+
 ----------------
 
 * NEW FEATURES AND FIXES IN GUTENPRINT 5.1.6:
